--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Merge Scouting</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 <body>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>   uncomment this if you want to use jquery--> 
+	<script src="script.js"></script>
   <div>
     <h1>hi</h1>
+  </div>
+  <div>
+    <button id='timerButton' name='timerButton' onclick='startTimer();'>
+      Start Timer
+    </button>
+    <h2>time is: <p id='timer'></p>
+    </h2>
   </div>
 </body>
 </html>
