Time fetching function added

--- a/public/recording.html
+++ b/public/recording.html
@@ -16,16 +16,21 @@
     <br><br>
 
     <div>
-        <button id='timerButton' name='timerButton' onclick='startTimer();'>
+        <button id='timerButton' style='display:block' onclick='startTimer();'>
             Start timer
         </button>
         <p id='timer'></p>
     </div>
+
+    <br><br>
+
+    <button onclick='highGoal();'>
+        High Goal
+    </button>
+
     <button id='reviewButton' style='display:none'>
         <a href='review.html'>Ready for review</a>
     </button>
-
-    note: make function that can check time to be able the log the time with the action
 
 </body>
 </html>
