Able to pass data from 'recording' to 'review'

--- a/public/review.html
+++ b/public/review.html
@@ -6,13 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recording Match</title>
 </head>
-<body>
+<body onload='fetchData();'>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>   uncomment this if you want to use jquery--> 
 	<script src="script.js"></script>
 
-    note: display editable boxes and autofill them with info from last page
+  High Goals: 
+  <input id='highGoalBox' type='text'/>
 
-
+  <br><br>
   <button>
       <a href='qr.html'>Generate QR Code</a>
   </button>
