added comments in 'review'

--- a/public/recording.html
+++ b/public/recording.html
@@ -22,11 +22,13 @@
         <p id='timer'></p>
     </div>
 
-    <br><br>
+    <div id='gameTrackerButtons' style='display:none'>
+        <br><br>
 
-    <button onclick='highGoal();'>
-        High Goal
-    </button>
+        <button onclick='highGoal();'>
+            High Goal
+        </button>
+    </div>
 
     <button id='reviewButton' style='display:none'>
         <a href='review.html'>Ready for review</a>
