--- a/public/index.html
+++ b/public/index.html
@@ -17,30 +17,30 @@
       Enter scout's name: <input type='text' id='scoutName'><br><br>
       Enter Team number: <input type='number' id='teamNumber'><br><br>
       Select team alliance position: <form>
-        <input type='radio' name='teamPosition' value='r1'>
+        <input type='radio' id='posr1' name='teamPosition' value='r1'>
         <label for="r1">Red 1</label>
-        <input type='radio' name='teamPosition' value='b1'>
+        <input type='radio' id='posr2' name='teamPosition' value='b1'>
         <label for="r2">Blue 1</label><br>
-        <input type='radio' name='teamPosition' value='r2'>
+        <input type='radio' id='posr3' name='teamPosition' value='r2'>
         <label for="r3">Red 2</label>
-        <input type='radio' name='teamPosition' value='b2'>
+        <input type='radio' id='posb1' name='teamPosition' value='b2'>
         <label for="b1">Blue 2</label><br>
-        <input type='radio' name='teamPosition' value='r3'>
+        <input type='radio' id='posb2' name='teamPosition' value='r3'>
         <label for="b2">Red 3</label>
-        <input type='radio' name='teamPosition' value='b3'>
+        <input type='radio' id='posb3' name='teamPosition' value='b3'>
         <label for="b3">Blue 3</label>
       </form><br>
       Select robot's starting position: <form>
-        <input type='radio' name='robotPosition' value='pos1'>
+        <input type='radio' id='pos1' name='robotPosition' value='pos1'>
         <label for="pos1">Position 1</label><br>
-        <input type='radio' name='robotPosition' value='pos2'>
+        <input type='radio' id='pos2' name='robotPosition' value='pos2'>
         <label for="pos2">Position 2</label><br>
-        <input type='radio' name='robotPosition' value='pos3'>
+        <input type='radio' id='pos3' name='robotPosition' value='pos3'>
         <label for="pos3">Position 3</label>
       </form><br>
     </div>
-    <button>
-        <a href='recording.html'>I'm ready for the match!</a>
+    <button onclick='preGameData();'>
+        I'm ready for the match!
     </button>
   </div>
 </body>
