--- a/public/review.html
+++ b/public/review.html
@@ -9,8 +9,19 @@
 <body onload='fetchData();'>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>   uncomment this if you want to use jquery--> 
 	<script src="script.js"></script>
-
+  <h1>Review:</h1>
   <div>
+    Scout Name:
+    <input id='scoutName' type='text'/><br><br>
+    Team Number:
+    <input id='teamNumber' type='number'/><br><br>
+    Robot starting position:
+    <select id='robotPosition'>
+      <option value='pos1'>1</option>
+      <option value='pos2'>2</option>
+      <option value='pos3'>3</option>
+    </select><br><br>
+
     High Goals: 
     <input id='highGoalBox' type='text'/>
   </div>
