--- a/public/recording.html
+++ b/public/recording.html
@@ -27,7 +27,7 @@
 
         <button onclick='highGoal();'>
             High Goal
-        </button>
+        </button> <!--ADD number that goes up the you click for feedback-->
     </div>
 
     <button id='reviewButton' style='display:none'>
