--- a/public/review.html
+++ b/public/review.html
@@ -16,11 +16,13 @@
     Team Number:
     <input id='teamNumber' type='number'/><br><br>
     Robot starting position:
-    <select id='robotPosition'>
-      <option value='pos1'>1</option>
-      <option value='pos2'>2</option>
-      <option value='pos3'>3</option>
-    </select><br><br>
+    <form id='robotPosition'>
+      <select>
+        <option value='pos1'>1</option>
+        <option value='pos2'>2</option>
+        <option value='pos3'>3</option>
+      </select>
+    </form><br><br>
 
     High Goals: 
     <input id='highGoalBox' type='text'/>
