--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         Enter information before match:
       </h1>
       Enter scout's name: <input type='text' id='scoutName'><br><br>
-      Enter Team number: <input type='number' id='teamNumber'><br><br>
+      Enter robot number: <input type='number' id='teamNumber'><br><br>
       Select team alliance position: <form>
         <input type='radio' id='posr1' name='teamPosition' value='r1'>
         <label for="r1">Red 1</label>
