timestamp checkbox polishing

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         <input type='radio' id='posb3' name='teamPosition' value='b3'>
         <label for="b3">Blue 3</label>
       </form><br>
-      Select robot's starting position: <form>
+      Select robot's starting position: (insert img with position desc.)<form>
         <input type='radio' id='pos1' name='robotPosition' value='pos1'>
         <label for="pos1">Position 1</label><br>
         <input type='radio' id='pos2' name='robotPosition' value='pos2'>
