--- a/public/review.html
+++ b/public/review.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recording Match</title>
+  <title>Reviewing</title>
 </head>
 <body onload='fetchData();'>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>   uncomment this if you want to use jquery--> 
@@ -28,7 +28,7 @@
         <option value='b3'>Blue 3</option>
       </select>
     </form><br>
-    Robot starting position:
+    Robot starting position: (insert img with position desc.)
     <form>
       <select id='robotPosition'>
         <option value='pos1'>1</option>
@@ -36,26 +36,10 @@
         <option value='pos3'>3</option>
       </select>
     </form><br><br>
-
-    High Goals: 
-    <!--<input id='highGoalBox' type='text'/>--> <!--make check box with all time goals and check the ones to remove (mistakes)-->
-    
-    <div id='highGoal'>
-
-    </div>
-
-    <table>
-      <tr>
-        <th>1</th>
-        <td>2m30s</td>
-        <button><td style='border: 1px solid black;'>x</td></button>  <!--//https://www.techiedelight.com/dynamically-create-checkbox-with-javascript/  ???-->
-      </tr>
-      <tr>
-        <th>2</th>
-        <td>1m24s</td>
-      </tr>
-    </table>
-
+    High Goals: (only check mistakes)  
+    <div id='highGoal'></div>
+    Total High Goals: (Note: added values will not have timestamps)<br>
+    <input id='highGoalTotal' type='number'/>
   </div>
 
   <br><br>
